// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar /> action actionText 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
      <View
        style={
          Array [
            Array [
              Object {
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 6,
                "paddingTop": 0,
              },
            ],
          ]
        }
      >
        <TouchableHighlight
          activeOpacity={1}
          block={false}
          color="light"
          delayPressOut={100}
          disabled={false}
          size="xsmall"
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.05)",
                "borderColor": "rgba(255, 255, 255, 0.74)",
                "borderRadius": 2,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 0,
                },
                Array [
                  Object {
                    "height": 20,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ],
                ],
              ],
            ]
          }
          testID="ds-snackbar-action-button"
          underlayColor="rgba(255, 255, 255, 0.38)"
          variant="secondary"
          variantColor="light"
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="medium"
            _lineHeight="xsmall"
            align="center"
            color="light.800"
            size="xxsmall"
            style={
              Array [
                Object {
                  "color": "rgba(255, 255, 255, 1.0)",
                  "fontFamily": "Lato-Bold",
                  "fontSize": 10,
                  "letterSpacing": 0.5,
                  "lineHeight": 14,
                  "textAlign": "center",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="bold"
          >
            RETRY
          </Text>
        </TouchableHighlight>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> dismiss button showDismissButton 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
      <View
        style={
          Array [
            Array [
              Object {
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 6,
                "paddingTop": 0,
              },
            ],
          ]
        }
      >
        <TouchableHighlight
          activeOpacity={1}
          block={false}
          color="light"
          delayPressOut={100}
          disabled={false}
          size="xsmall"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "black",
                "borderRadius": 2,
                "borderStyle": "solid",
                "borderWidth": 0,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 2,
                  "paddingRight": 2,
                  "paddingTop": 0,
                },
                Array [
                  Object {
                    "height": 20,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ],
                ],
              ],
            ]
          }
          testID="ds-snackbar-dismiss-button"
          underlayColor="rgba(255, 255, 255, 0.38)"
          variant="tertiary"
          variantColor="light"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="none"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                fill={4294967295}
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </TouchableHighlight>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> iconName renders with an icon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 8,
                "paddingTop": 0,
              },
            ],
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          fill="rgba(255, 255, 255, 1.0)"
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          testID="ds-icon"
          vbHeight={24}
          vbWidth={24}
          width={20}
        >
          <RNSVGGroup
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Snackbar text here
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> maxLines renders 1 line 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          numberOfLines={1}
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog  The quick brown fox jumps over the lazy dog
        </Text>
      </View>
      <View
        style={
          Array [
            Array [
              Object {
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 6,
                "paddingTop": 0,
              },
            ],
          ]
        }
      >
        <TouchableHighlight
          activeOpacity={1}
          block={false}
          color="light"
          delayPressOut={100}
          disabled={false}
          size="xsmall"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "black",
                "borderRadius": 2,
                "borderStyle": "solid",
                "borderWidth": 0,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 2,
                  "paddingRight": 2,
                  "paddingTop": 0,
                },
                Array [
                  Object {
                    "height": 20,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ],
                ],
              ],
            ]
          }
          testID="ds-snackbar-dismiss-button"
          underlayColor="rgba(255, 255, 255, 0.38)"
          variant="tertiary"
          variantColor="light"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="none"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                fill={4294967295}
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </TouchableHighlight>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> maxLines renders multiple lines 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog  The quick brown fox jumps over the lazy dog
        </Text>
      </View>
      <View
        style={
          Array [
            Array [
              Object {
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 6,
                "paddingTop": 0,
              },
            ],
          ]
        }
      >
        <TouchableHighlight
          activeOpacity={1}
          block={false}
          color="light"
          delayPressOut={100}
          disabled={false}
          size="xsmall"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "black",
                "borderRadius": 2,
                "borderStyle": "solid",
                "borderWidth": 0,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 2,
                  "paddingRight": 2,
                  "paddingTop": 0,
                },
                Array [
                  Object {
                    "height": 20,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ],
                ],
              ],
            ]
          }
          testID="ds-snackbar-dismiss-button"
          underlayColor="rgba(255, 255, 255, 0.38)"
          variant="tertiary"
          variantColor="light"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="none"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                fill={4294967295}
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </TouchableHighlight>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> position change bottom position 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    bottom={4}
    position="absolute"
    style={
      Object {
        "bottom": 32,
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Snackbar text here
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> position change left position 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    left={2}
    position="absolute"
    style={
      Object {
        "left": 16,
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Snackbar text here
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> position change right position 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    right={2}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "right": 16,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Snackbar text here
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> position change top position 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "top": 32,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
    top={4}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Snackbar text here
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> variant default 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> variant negative 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(209, 45, 45, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="negative"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> variant neutral 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(22, 47, 86, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="neutral"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> variant positive 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(31, 137, 14, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="positive"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Snackbar /> variant warning 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    position="absolute"
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(205, 130, 20, 1.0)",
            "borderRadius": 2,
          },
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              Array [
                Object {
                  "width": 718,
                },
              ],
            ],
          ],
        ]
      }
      variant="warning"
    >
      <View
        style={
          Array [
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 16,
                  "paddingTop": 0,
                },
              ],
            ],
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          align="left"
          color="light.900"
          size="medium"
          style={
            Array [
              Object {
                "color": "rgba(255, 255, 255, 1.0)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
          weight="regular"
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;
